--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data",
+  "name": "join-tables",
   "version": "1.0.0",
   "description": "",
   "main": "dist/join_tables.js",
@@ -7,7 +7,7 @@
     "compile": "rollup index.js --format cjs --output dist/join_tables.js; rollup cli.js --format cjs --banner '#!/usr/bin/env node' --output dist/join_tables_cli.js",
     "merge": "./node_modules/.bin/babel-node --presets es2015 index.js"
   },
-  "author": "",
+  "author": "Niko Kommenda",
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^1.2.0",
